refactoring and unit test added